Support for Transmission torrent client

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -350,14 +350,16 @@ enable_type_base_move=False
 
 # CROSS-SEEDING CONFIGS
 # Specifies the client to which torrents needs to be uploaded.
-# Possible Values: |  Qbittorrent  |  Rutorrent  |  Deluge (Not Implemented)  |  Transmisison (Not Implemented)  |
+# Possible Values: |  Qbittorrent  |  Rutorrent  |  Transmisison  |  Deluge (Not Implemented)  |
 client=Qbittorrent
 # These are the configurations needed to connect to the torrent client
 client_host=# https://qbit.mydomain.com
 client_port=# 443
 client_username=# username
 client_password=# my_password
-# applicable for rutorrent only as of now. Default is /
+# Applicable for Rutorrent and Transmisison.
+# Rutorrent: Default is /
+# Transmission: Default value must be configured as /transmission/rpc or a custom path as per your configuration
 client_path=/
 # The label / category to which cross-seeding torrents needs to be added to.
 # Default: GGBotCrossSeed
