--- a/samples/reuploader/.transmission.env
+++ b/samples/reuploader/.transmission.env
@@ -15,13 +15,12 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 # ::::: NOTE :::::
-# Refer to https://hub.docker.com/r/romancin/rutorrent for more details and configurations
+# Refer to https://hub.docker.com/r/linuxserver/transmission for more details and configurations
 # ::::: NOTE :::::
 
 PUID=1001
 PGID=1001
 TZ=Europe/London
-# default basic auth password admin/admin
-# the below property will created watch sub dirs for trackers.
-# Not needed for GG-BOT, hence disabled.
-CREATE_SUBDIR_BY_TRACKERS=NO
+
+USER= #(optional) provide your auth username here
+PASS= #(optional) provide your auth password here
