--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -317,7 +317,7 @@ reupload_label=
 cross_seed_label=GGBotCrossSeed
 
 # Specifies the client from which torrents needs to be reuploaded
-# Possible Values: |  Qbittorrent  |  Rutorrent  |  Deluge (Not Implemented)  |  Transmission (Not Implemented)  |
+# Possible Values: |  Qbittorrent  |  Rutorrent  |  Transmission  |  Deluge (Not Implemented)  |
 # See Setup and Upgrade Wiki page for samples
 client=Qbittorrent
 # These are the configurations needed to connect to the torrent client
@@ -325,7 +325,9 @@ client_host=# https://qbit.mydomain.com
 client_port=# 443
 client_username=# username
 client_password=# my_password
-# applicable for rutorrent only as of now. Default is /
+# applicable for Rutorrent and Transmisison.
+# Rutorrent: Default is /
+# Transmission: Default value MUST be configured as /transmission/rpc or a custom path as per your configuration
 client_path=/
 
 # Cache Config
