--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -10,10 +10,11 @@ pyimgbox==1.0.7
 pymediainfo==7.0.1
 pymongo==4.11.1
 python-dotenv==1.0.1
-python-Levenshtein==0.12.2
+# python-Levenshtein==0.12.2
 qbittorrent-api==2024.12.71
 requests==2.32.3
 rich==13.9.4
 sentry-sdk==2.22.0
 torf==4.2.7
 Jinja2==3.1.5
+transmission-rpc==7.0.11
