--- a/samples/reuploader/.env
+++ b/samples/reuploader/.env
@@ -29,6 +29,10 @@ QBITTORRENT_WEBUI_PORT=8080
 RUTORRENT_WEBUI_PORT=8082
 RUTORRENT_EXTRA_PORTS=51415
 
+# Transmission Ports
+TRANSMISSION_PORT_9091=9091
+TRANSMISSION_PORT_51413=51413
+
 # GG-BOT Visor Server Ports
 VISOR_SERVER_PORT=30035
 
@@ -38,3 +42,4 @@ MONGO_EXPRESS_VERSION=latest
 MONGO_VERSION=latest
 QBITTORRENT_VERSION=latest
 RUTORRENT_VERSION=latest
+TRANSMISSION_VERSION=latest
