--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -196,6 +196,10 @@ YOINK_ANNOUNCE_URL=https://yoinked.org/announce/<TRACKER_PASS_KEY>
 TMG_API_KEY=# API_KEY
 TMG_ANNOUNCE_URL=https://tmghub.org/announce.php?pid=<TRACKER_PASS_KEY>
 
+# SeedPool
+SPL_API_KEY=# API_KEY
+SPL_ANNOUNCE_URL=https://seedpool.org/announce/<TRACKER_PASS_KEY>
+
 ################################################################
 #                                                              #
 #                    Other API Keys / Defaults                 #
