--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -183,6 +183,10 @@ YOINK_ANNOUNCE_URL=https://yoinked.org/announce/<TRACKER_PASS_KEY>
 TMG_API_KEY=# API_KEY
 TMG_ANNOUNCE_URL=https://tmghub.org/announce.php?pid=<TRACKER_PASS_KEY>
 
+# SeedPool
+SPL_API_KEY=# API_KEY
+SPL_ANNOUNCE_URL=https://seedpool.org/announce/<TRACKER_PASS_KEY>
+
 # Dynamic Tracker Selection
 # -----------------------------------------
 # Dynamic tracker selection allows the user to control the trackers to which each torrent will be uploaded to.
