--- a/requirements/requirements_dev.txt
+++ b/requirements/requirements_dev.txt
@@ -7,3 +7,4 @@ pipdeptree==2.25.0
 poetry==2.0.0 # poetry-plugin-export 1.9.0 needs poetry 2.0.0
 poetry-core==2.0.0 # poetry-plugin-export 1.9.0 needs poetry-core 2.0.0
 poetry-plugin-export==1.9.0
+jinjaninja==0.1.2
