Added support for Deluge torrent client

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -354,7 +354,7 @@ enable_type_base_move=False
 
 # CROSS-SEEDING CONFIGS
 # Specifies the client to which torrents needs to be uploaded.
-# Possible Values: |  Qbittorrent  |  Rutorrent  |  Transmisison  |  Deluge (Not Implemented)  |
+# Possible Values: |  Qbittorrent  |  Rutorrent  |  Transmisison  |  Deluge  |
 client=Qbittorrent
 # These are the configurations needed to connect to the torrent client
 client_host=# https://qbit.mydomain.com
