--- a/samples/reuploader/.env
+++ b/samples/reuploader/.env
@@ -33,13 +33,19 @@ RUTORRENT_EXTRA_PORTS=51415
 TRANSMISSION_PORT_9091=9091
 TRANSMISSION_PORT_51413=51413
 
+# Deluge Ports
+DELUGE_PORT_6881=6881
+DELUGE_PORT_8112=8112
+DELUGE_PORT_58846=58846
+
 # GG-BOT Visor Server Ports
 VISOR_SERVER_PORT=30035
 
 # Services image versions
-GG_BOT_REUPLOADER_VERSION=latest-reuploader
-MONGO_EXPRESS_VERSION=latest
 MONGO_VERSION=latest
-QBITTORRENT_VERSION=latest
+DELUGE_VERSION=latest
 RUTORRENT_VERSION=latest
+QBITTORRENT_VERSION=latest
 TRANSMISSION_VERSION=latest
+MONGO_EXPRESS_VERSION=latest
+GG_BOT_REUPLOADER_VERSION=latest-reuploader
