--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -321,7 +321,7 @@ reupload_label=
 cross_seed_label=GGBotCrossSeed
 
 # Specifies the client from which torrents needs to be reuploaded
-# Possible Values: |  Qbittorrent  |  Rutorrent  |  Transmission  |  Deluge (Not Implemented)  |
+# Possible Values: |  Qbittorrent  |  Rutorrent  |  Transmission  |  Deluge  |
 # See Setup and Upgrade Wiki page for samples
 client=Qbittorrent
 # These are the configurations needed to connect to the torrent client
