--- a/e2e-tests/resources/deluge/core.conf
+++ b/e2e-tests/resources/deluge/core.conf
@@ -15,7 +15,7 @@
     "dont_count_slow_torrents": false,
     "download_location": "/downloads",
     "download_location_paths_list": [],
-    "enabled_plugins": [],
+    "enabled_plugins": ["Label"],
     "enc_in_policy": 1,
     "enc_level": 2,
     "enc_out_policy": 1,
