--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -5,9 +5,9 @@ fuzzywuzzy==0.18.0
 guessit==3.8.0
 imgurpython==1.1.7
 ptpimg_uploader==0.6
-pyfiglet==1.0.0
+pyfiglet==1.0.0 # cannot bump to 1.0.2 due to missing package in full disk image
 pyimgbox==1.0.7
-pymediainfo==7.0.1
+pymediainfo==7.0.1 # has issues with 6.0.1
 pymongo==4.11.1
 python-dotenv==1.0.1
 qbittorrent-api==2024.12.71
