--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -199,7 +199,7 @@ SPL_ANNOUNCE_URL=https://seedpool.org/announce/<TRACKER_PASS_KEY>
 # When the dynamic tracker selection feature is enabled,
 #   - Reuploader still needs some trackers to be provided via the `-t` or `--trackers` command line argument.
 #     These trackers will be considered as `fall_back_trackers`. (we'll get to this in more details later)
-#   - The property `reupload_label` will be ignored. All torrents added to the client should be having the
+#   - The property `reupload_label` will be ignored.
 #   - All torrents added to client must have label `GGBOT` or must start with `GGBOT`.
 #   - The trackers to which a particular tracker can be uploaded to can be added to the category/label as `::` separated entries. (dynamic trackers)
 #     Eg: A torrent with label as GGBOT::TSP::SZN will be uploaded to TSP and SZN
@@ -207,6 +207,7 @@ SPL_ANNOUNCE_URL=https://seedpool.org/announce/<TRACKER_PASS_KEY>
 #   - If the label is just GGBOT or GGBOT:: (user has not provided any dynamic trackers),
 #     then the reuploader will upload the torrent to the `fall_back_trackers` provided by the user via `-t` or `--trackers` argument at startup.
 #   - If none of the dynamic trackers, are valid or not configured properly, then reuploader will attempt to upload to the `fall_back_trackers`.
+# NOTE: Deluge doesn't support :: in label. For deluge use --. eg: GGBOT:--TSP--SZN
 dynamic_tracker_selection=False
 
 ################################################################
