--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -19,3 +19,4 @@ Jinja2==3.1.5
 transmission-rpc==7.0.11
 deluge-client==1.10.2
 PyYaml==5.3.1 # PyYaml cannot be upgraded in alpine.
+cryptography==44.0.2
