Issue#151: Re-uploader MongoDB with authentication

--- a/e2e-tests/resources/reupload-test.config.env
+++ b/e2e-tests/resources/reupload-test.config.env
@@ -263,6 +263,11 @@ reupload_label=GGBOT
 # if `cross_seed_label=SeedTorrents`, then the source torrent will be labelled as `SeedTorrents_source`
 cross_seed_label=GGBotCrossSeed
 
+################################################################
+#                                                              #
+#                 Torrent Client Configuration                 #
+#                                                              #
+################################################################
 # Specifies the client from which torrents needs to be reuploaded
 # Possible Values: |  Qbittorrent  |  Rutorrent  |  Deluge (Not Implemented)  |  Transmission (Not Implemented)  |
 # See Setup and Upgrade Wiki page for samples
@@ -275,6 +280,11 @@ client_password=
 # applicable for rutorrent only as of now. Default is /
 client_path=/
 
+################################################################
+#                                                              #
+#                      Cache Configuration                     #
+#                                                              #
+################################################################
 # Cache Config
 # Some metadata related to the torrents will be cached for better performance and report generation.
 # These data are stored in a redis cache, below are the configuration needed to connect to a redis cache
@@ -289,6 +299,7 @@ cache_port=<<MONGO_PORT_PLACEHOLDER>>
 cache_database=gg-bot-reuploader
 cache_username=
 cache_password=
+cache_auth_db=
 
 ################################################################
 #                                                              #
