--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -367,12 +367,13 @@ cache_host=mongo
 cache_port=27017
 cache_database=gg-bot-reuploader
 
-# Cache authentication settings (optional)
-# Uncomment and set these values if your Cache requires authentication
-# cache_username=cache_user
-# cache_password=mongodb_password
+# Cache authentication settings (required when MongoDB authentication is enabled)
+cache_username=gg_bot_user
+# Add the # ENCRYPT marker to protect sensitive credentials
+# This value will be encrypted when you run: python encrypt_cli.py encrypt -i reupload.config.env
+cache_password=gg_bot_password # ENCRYPT
 # The database where user credentials are stored, default is "admin"
-# cache_auth_db=admin
+cache_auth_db=admin
 
 
 ################################################################
