--- a/samples/reuploader/docker-compose-deluge.yml
+++ b/samples/reuploader/docker-compose-deluge.yml
@@ -21,49 +21,65 @@
 # and provide values for the following variables (samples for all these files are available in the env-files-samples folder)
 #
 # .env file           -> variables for docker-compose
-# .deluge.env    -> deluge related environment variables
+# .deluge.env         -> deluge related environment variables
 # reupload.config.env -> gg-bot reuploader configurations
 #
-mongo:
-  image: mongo:${MONGO_VERSION}
-  hostname: mongo
-  restart: unless-stopped
-  volumes:
-    - ${BASE_PATH}/apps/mongo:/data/db
+services:
+  mongo:
+    image: mongo:${MONGO_VERSION}
+    hostname: mongo
+    restart: unless-stopped
+    command: ["--auth"]
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root_password
+    volumes:
+      - ${BASE_PATH}/apps/mongo:/data/db
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
 
-# When using deluge ensure that the Label plugin is installed and enabled.
-# Re-Uploader needs the label plugin to work with deluge.
-deluge:
-  image: lscr.io/linuxserver/deluge:${DELUGE_VERSION}
-  hostname: deluge
-  restart: unless-stopped
-  env_file:
-    - .deluge.env
-  volumes:
-    - ${BASE_PATH}/apps/deluge/config:/config
-    - ${BASE_PATH}/downloads:/downloads
-  ports:
-    - ${DELUGE_PORT_8112}:8112
-    - ${DELUGE_PORT_58846}:58846
-    - ${DELUGE_PORT_6881}:6881
-    - ${DELUGE_PORT_6881}:6881/udp
+  mongo-express:
+    image: mongo-express:latest
+    restart: unless-stopped
+    ports:
+      - "8081:8081"
+    env_file:
+      - .mongo_express.env
+    depends_on:
+      - mongo
 
-gg-bot-auto-uploader:
-  image: noobmaster669/gg-bot-uploader:${GG_BOT_REUPLOADER_VERSION}
-  restart: unless-stopped
-  hostname: gg-bot-reuploader
-  # change the below volume mapping according to your torrent client
-  volumes:
-    - ${BASE_PATH}/data/downloads:/downloads
-  ports:
-    - ${VISOR_SERVER_PORT}:30035
-  env_file:
-    - reupload.config.env
-  # based on your configuration the gg-bot-auto-uploader will depend on either mongo or redis
-  # if using mongo comment out redis, and vice-versa
-  depends_on:
-    - mongo
-    - deluge
-  # provide the list of trackers to upload to here
-  # TODO see how this can be taken from the .env file
-  command: [ "-t", "<TRACKERS>", "<OPTIONAL_ARGUMENTS>" ]
+  deluge:
+    image: lscr.io/linuxserver/deluge:${DELUGE_VERSION}
+    hostname: deluge
+    restart: unless-stopped
+    env_file:
+      - .deluge.env
+    volumes:
+      - ${BASE_PATH}/apps/deluge/config:/config
+      - ${BASE_PATH}/data/downloads:/downloads
+    ports:
+      - ${DELUGE_WEBUI_PORT}:8112
+      - ${DELUGE_PORT_58846}:58846
+      - ${DELUGE_PORT_58946}:58946
+      - ${DELUGE_PORT_58946}:58946/udp
+      - ${DELUGE_PORT_6881}:6881
+      - ${DELUGE_PORT_6881}:6881/udp
+  gg-bot-auto-uploader:
+    image: noobmaster669/gg-bot-uploader:${GG_BOT_REUPLOADER_VERSION}
+    restart: unless-stopped
+    hostname: gg-bot-reuploader
+    tty: true
+    # change the below volume mapping according to your torrent client
+    volumes:
+      - ${BASE_PATH}/data/downloads:/downloads
+    ports:
+      - ${VISOR_SERVER_PORT}:30035
+    env_file:
+      - reupload.config.env
+    # based on your configuration the gg-bot-auto-uploader will depend on either mongo or redis
+    # if using mongo comment out redis, and vice-versa
+    depends_on:
+      - mongo
+      - deluge
+    # provide the list of trackers to upload to here
+    # TODO see how this can be taken from the .env file
+    command: [ "-t", "<TRACKERS>", "<OPTIONAL_ARGUMENTS>" ]
