--- a/samples/reuploader/docker-compose-qbittorrent.yml
+++ b/samples/reuploader/docker-compose-qbittorrent.yml
@@ -24,12 +24,29 @@
 # .qbittorrent.env    -> qbittorrent related environment variables
 # reupload.config.env -> gg-bot reuploader configurations
 #
+services:
   mongo:
     image: mongo:${MONGO_VERSION}
     hostname: mongo
     restart: unless-stopped
+    command: ["--auth"]
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root_password
     volumes:
       - ${BASE_PATH}/apps/mongo:/data/db
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+
+  mongo-express:
+    image: mongo-express:latest
+    restart: unless-stopped
+    ports:
+      - "8081:8081"
+    env_file:
+      - .mongo_express.env
+    depends_on:
+      - mongo
+
   qbittorrent:
     image: lscr.io/linuxserver/qbittorrent:${QBITTORRENT_VERSION}
     hostname: qbittorrent
@@ -43,6 +60,7 @@
       - ${QBITTORRENT_PORT_6881}:6881
       - ${QBITTORRENT_PORT_6881}:6881/udp
       - ${QBITTORRENT_WEBUI_PORT}:${QBITTORRENT_WEBUI_PORT}
+
   gg-bot-auto-uploader:
     image: noobmaster669/gg-bot-uploader:${GG_BOT_REUPLOADER_VERSION}
     restart: unless-stopped
@@ -50,10 +68,15 @@
     # change the below volume mapping according to your torrent client
     volumes:
       - ${BASE_PATH}/data/downloads:/downloads
+      # OPTIONAL: If using encrypted configuration, mount your private key
+      # - ${BASE_PATH}/keys/private_key.pem:/app/private_key.pem:ro
     ports:
       - ${VISOR_SERVER_PORT}:30035
     env_file:
       - reupload.config.env
+    # OPTIONAL: Additional environment variables for encrypted configuration
+    # environment:
+    #   - PRIVATE_KEY_PATH=/app/private_key.pem
     # based on your configuration the gg-bot-auto-uploader will depend on either mongo or redis
     # if using mongo comment out redis, and vice-versa
     depends_on:
