--- a/e2e-tests/resources/mock_server_config.yml
+++ b/e2e-tests/resources/mock_server_config.yml
@@ -79,15 +79,6 @@ mocks:
       status_code: 200
       body: '{"success":true,"status_code":0,"data":[],"status_message":"Successfully fetched data"}'
 
-
-  - url: "/api/upload.php?api_key=PLACEHOLDER_API_KEY"
-    method: "POST"
-    headers:
-      Content-Type: "application/json"
-    response:
-      status_code: 200
-      body: '{"success":true,"status_code":0,"data":[],"status_message":"Successfully uploaded torrent"}'
-
   - url: "/3/search/tv?api_key=PLACEHOLDER_API_KEY&query=%27How%20I%20Met%20Your%20Mother%27&page=1&include_adult=false"
     method: "GET"
     headers:
@@ -135,3 +126,48 @@ mocks:
     response:
       status_code: 200
       body: '{"id":171,"url":"https://www.tvmaze.com/shows/171/how-i-met-your-mother","name":"How I Met Your Mother","type":"Scripted","language":"English","genres":["Drama","Comedy","Romance"],"status":"Ended","runtime":30,"averageRuntime":30,"premiered":"2005-09-19","ended":"2014-03-31","officialSite":null,"schedule":{"time":"20:00","days":["Monday"]},"rating":{"average":7.8},"weight":99,"network":{"id":2,"name":"CBS","country":{"name":"United States","code":"US","timezone":"America/New_York"},"officialSite":"https://www.cbs.com/"},"webChannel":null,"dvdCountry":null,"externals":{"tvrage":3918,"thetvdb":75760,"imdb":"tt0460649"},"image":{"medium":"https://static.tvmaze.com/uploads/images/medium_portrait/0/2451.jpg","original":"https://static.tvmaze.com/uploads/images/original_untouched/0/2451.jpg"},"summary":"<p><b>How I Met Your Mother</b> is a comedy about Ted and how he fell in love. It all starts when Teds best friend, Marshall drops the bombshell that hes going to propose to his long-time girlfriend, Lilya kindergarten teacher. At that moment, Ted realizes that he had better get a move on if he too hopes to find true love. Helping him in his quest is Barney a friend with endless, sometimes outrageous opinions, a penchant for suits and a foolproof way to meet women. When Ted meets Robin hes sure its love at first sight, but destiny may have something else in store.</p>","updated":1717774246,"_links":{"self":{"href":"https://api.tvmaze.com/shows/171"},"previousepisode":{"href":"https://api.tvmaze.com/episodes/12492","name":"Last Forever (2)"}}}'
+
+  # TSP Upload Api
+  - url: "/api/upload.php?api_key=PLACEHOLDER_API_KEY"
+    method: "POST"
+    headers:
+      Content-Type: "application/json"
+    response:
+      status_code: 200
+      body: '{"success":true,"status_code":0,"data":[],"status_message":"Successfully uploaded torrent"}'
+
+  # UNIT3D UPLOAD API
+  - url: "/api/upload/PLACEHOLDER_API_KEY"
+    method: "POST"
+    headers:
+      Content-Type: "application/json"
+    response:
+      status_code: 200
+      body: '{"success": true}'
+
+  # SPEED APP UPLOAD API
+  - url: "/api/upload"
+    method: "POST"
+    headers:
+      Content-Type: "application/json"
+    response:
+      status_code: 200
+      body: '{"success": true}'
+
+  # BHDTV UPLOAD API
+  - url: "/takeupload.php"
+    method: "POST"
+    headers:
+      Content-Type: "application/json"
+    response:
+      status_code: 400
+      body: '{"data": "No user found!", "message": "Unauthorized", "status": "Error"}'
+
+  # ANT UPLOAD API
+  - url: "/api.php?api_key=PLACEHOLDER_API_KEY"
+    method: "POST"
+    headers:
+      Content-Type: "application/json"
+    response:
+      status_code: 500
+      body: '{"success": true}'
