--- a/Dockerfiles/Dockerfile.baseimage.armhf
+++ b/Dockerfiles/Dockerfile.baseimage.armhf
@@ -24,11 +24,12 @@ ENV IS_FULL_DISK_SUPPORTED=false
 RUN \
 	echo "**** install build packages ****" && \
 	apk add --no-cache --virtual=build-dependencies \
-	g++ \
-	libxml2-dev \
+	  g++ \
+	  libxml2-dev \
   	libxslt-dev \
-	py3-pip \
-	python3-dev
+    libffi-dev \
+	  py3-pip \
+	  python3-dev
 
 # installing packages for
 # - rar extraction
